<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.echarge</groupId>
  <artifactId>neuron-parent</artifactId>
  <version>1.0.0</version>
  <packaging>pom</packaging>
  <name>NeuronCloud ${project.version}</name>

	<developers>
		<developer>
			<name>旭衡电子(深圳)</name>
			<email>info@alwayscontrol.com</email>
		</developer>
	</developers>
	
  	<parent>
	    <groupId>org.springframework.boot</groupId>
	    <artifactId>spring-boot-starter-parent</artifactId>
	    <version>3.5.5</version>
	    <relativePath/>
	</parent>

	<properties>
		<neuron.version>1.0.0</neuron.version>
		<!-- JDK版本支持17、21、24 -->
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <fastjson.version>2.0.57</fastjson.version>
		<pegdown.version>1.6.0</pegdown.version>
		<commonmark.version>0.17.0</commonmark.version>
		<!-- 数据库驱动 -->
		<postgresql.version>42.2.25</postgresql.version>
        <hutool.version>5.8.25</hutool.version>
		<autopoi-web.version>2.0.4</autopoi-web.version>
		
		<!-- 持久层 -->
		<mybatis-plus.version>3.5.12</mybatis-plus.version>
		<dynamic-datasource-spring-boot-starter.version>4.3.1</dynamic-datasource-spring-boot-starter.version>
		<druid.version>1.2.24</druid.version>

		<commons-io.version>2.20.0</commons-io.version>
		<commons-fileupload.version>1.5</commons-fileupload.version>
		<!-- shiro -->
		<shiro.version>2.0.5</shiro.version>
		<shiro-redis.version>3.2.3</shiro-redis.version>
		<java-jwt.version>4.5.0</java-jwt.version>
		<minio.version>8.5.7</minio.version>
		<jedis.version>3.8.0</jedis.version>
	</properties>

	<modules>
        <module>neuron-core</module>
        <module>neuron-system</module>
		<module>neuron-module</module>
    </modules>

	<repositories>
		<repository>
			<id>aliyun</id>
			<name>aliyun Repository</name>
			<url>https://maven.aliyun.com/repository/public</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>asm</artifactId>
					<groupId>org.ow2.asm</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-launcher</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- Lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<!-- json -->
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>${fastjson.version}</version>
		</dependency>
		<!-- markdown -->
		<!--<dependency>
			<groupId>org.pegdown</groupId>
			<artifactId>pegdown</artifactId>
			<version>${pegdown.version}</version>
		</dependency>-->
		<!--markdown 解析 https://github.com/commonmark/commonmark-java -->
		<dependency>
			<groupId>org.commonmark</groupId>
			<artifactId>commonmark</artifactId>
			<version>${commonmark.version}</version>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<!-- system 模块-->
			<dependency>
				<groupId>com.echarge</groupId>
				<artifactId>neuron-system-impl</artifactId>
				<version>${neuron.version}</version>
			</dependency>
			<!-- core -->
			<dependency>
				<groupId>com.echarge</groupId>
				<artifactId>neuron-core</artifactId>
				<version>${neuron.version}</version>
			</dependency>
			<!-- system 单体 api -->
			<dependency>
				<groupId>com.echarge</groupId>
				<artifactId>neuron-system-api</artifactId>
				<version>${neuron.version}</version>
			</dependency>
			<!-- NeuronCloud 业务模块 -->
			<dependency>
				<groupId>com.echarge</groupId>
				<artifactId>neuron-device</artifactId>
				<version>${neuron.version}</version>
			</dependency>
			<dependency>
				<groupId>com.echarge</groupId>
				<artifactId>neuron-alert</artifactId>
				<version>${neuron.version}</version>
			</dependency>
			<dependency>
				<groupId>com.echarge</groupId>
				<artifactId>neuron-protocol</artifactId>
				<version>${neuron.version}</version>
			</dependency>
				
			<!-- fileupload -->
			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>${commons-fileupload.version}</version>
				<exclusions>
					<exclusion>
						<artifactId>commons-io</artifactId>
						<groupId>commons-io</groupId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>com.squareup.okhttp3</groupId>
				<artifactId>okhttp</artifactId>
				<version>4.4.1</version>
			</dependency>
			<!-- hutool工具类-->
			<dependency>
				<groupId>cn.hutool</groupId>
				<artifactId>hutool-core</artifactId>
				<version>${hutool.version}</version>
			</dependency>
			<dependency>
				<groupId>cn.hutool</groupId>
				<artifactId>hutool-crypto</artifactId>
				<version>${hutool.version}</version>
			</dependency>
			<!--minio-->
			<dependency>
				<groupId>io.minio</groupId>
				<artifactId>minio</artifactId>
				<version>${minio.version}</version>
				<exclusions>
					<exclusion>
						<artifactId>okio</artifactId>
						<groupId>com.squareup.okio</groupId>
					</exclusion>
					<exclusion>
						<artifactId>okhttp</artifactId>
						<groupId>com.squareup.okhttp3</groupId>
					</exclusion>
				</exclusions>
			</dependency>
			<!-- AutoPoi Excel工具类-->
			<dependency>
				<groupId>org.jeecgframework</groupId>
				<artifactId>autopoi-spring-boot-3-starter</artifactId>
				<version>${autopoi-web.version}</version>
				<exclusions>
					<exclusion>
						<groupId>commons-codec</groupId>
						<artifactId>commons-codec</artifactId>
					</exclusion>
					<exclusion>
						<artifactId>xercesImpl</artifactId>
						<groupId>xerces</groupId>
					</exclusion>
					<exclusion>
						<artifactId>guava</artifactId>
						<groupId>com.google.guava</groupId>
					</exclusion>
					<exclusion>
						<groupId>commons-io</groupId>
						<artifactId>commons-io</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-compress</artifactId>
				<version>1.27.1</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<!-- 指定JDK编译版本 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <!-- 打包跳过测试 -->
            <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-surefire-plugin</artifactId>
		        <configuration>
		          <skipTests>true</skipTests>
		        </configuration>
	        </plugin>
	         <!-- 避免font文件的二进制文件格式压缩破坏 -->
	         <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
                <configuration>
					<encoding>UTF-8</encoding>
                    <nonFilteredFileExtensions>
						<!-- 常见的二进制文件类型 -->
                        <nonFilteredFileExtension>woff</nonFilteredFileExtension>
                        <nonFilteredFileExtension>woff2</nonFilteredFileExtension>
                        <nonFilteredFileExtension>eot</nonFilteredFileExtension>
                        <nonFilteredFileExtension>ttf</nonFilteredFileExtension>
                        <nonFilteredFileExtension>svg</nonFilteredFileExtension>
                        <nonFilteredFileExtension>glb</nonFilteredFileExtension>
                        <nonFilteredFileExtension>wasm</nonFilteredFileExtension>
                        <nonFilteredFileExtension>ico</nonFilteredFileExtension>
						<nonFilteredFileExtension>swf</nonFilteredFileExtension>
						<nonFilteredFileExtension>mp3</nonFilteredFileExtension>
						<nonFilteredFileExtension>mp4</nonFilteredFileExtension>
						<nonFilteredFileExtension>jpg</nonFilteredFileExtension>
						<nonFilteredFileExtension>png</nonFilteredFileExtension>
						<nonFilteredFileExtension>gif</nonFilteredFileExtension>
						<nonFilteredFileExtension>pdf</nonFilteredFileExtension>
						<nonFilteredFileExtension>bcmap</nonFilteredFileExtension>
						<nonFilteredFileExtension>cmap</nonFilteredFileExtension>
						<nonFilteredFileExtension>cur</nonFilteredFileExtension>
						<nonFilteredFileExtension>zip</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>
		</plugins>
		<resources>
			<resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.xml</include>
					<include>**/*.json</include>
					<include>**/*.ftl</include>
				</includes>
			</resource>
		</resources>
	</build>

    <!-- 环境 -->
    <profiles>
        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <profile.name>dev</profile.name>
            </properties>
        </profile>
        <profile>
            <id>test</id>
            <properties>
                <profile.name>test</profile.name>
            </properties>
        </profile>
        <profile>
            <id>docker</id>
            <properties>
                <profile.name>docker</profile.name>
            </properties>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <profile.name>prod</profile.name>
            </properties>
        </profile>
    </profiles>
</project>